--- a/build.gradle
+++ b/build.gradle
@@ -105,3 +105,10 @@ dependencies {
 
 }
 
+processResources.dependsOn('copySecret')
+
+tasks.register('copySecret', Copy) {
+    from 'Secret-DogCat/yml' // 서브모듈 디렉토리 경로
+    include "application.yml"  // 복사할 파일들
+    into 'src/main/resources'  // 복사 위치
+}
