--- a/build.gradle
+++ b/build.gradle
@@ -108,7 +108,7 @@ dependencies {
 //processResources.dependsOn('copySecret')
 //
 //tasks.register('copySecret', Copy) {
-//    from './서브모듈 디렉토리 경로'
+//    from './Secret-DogCat/yml'
 //    include "application*.yml"  // 복사할 파일들
 //    into 'src/main/resources'  // 복사 위치
 //}
