summernote 코드 정리, 전체적인 코드 정리 로깅폴더 자동생성,

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -131,16 +131,16 @@ logging:
     org:
       springframework: info
       community: warn
-      security: trace
+      security: warn
       hibernate:
-        sql: debug
+        sql: warn
     com:
       amazonaws:
         util:
           EC2MetadataUtil: error
     root: warn
   file:
-    path: ${user.home}
+    path: ${user.home}/testupload/log
     name: DogCatLog.log
 
 cloud:
