aws 환경변수, 썸머노트 고치는중

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -106,6 +106,7 @@ spring:
       max-request-size: 50MB
 
 # 저장 디렉토리
+uploadPath: C:/testupload/
 s3UploadPath: C:/testupload/s3/
 tempUploadPath: C:/testupload/temp/
 
