게시글 수정시 업로드된 s3 이미지를 지우고 수정하면 db와 버킷의 오브젝트 삭제

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -125,7 +125,7 @@ loggingPath: C:/testupload/log/
 baseUrl: http://localhost:10000
 oldUrl: http://localhost:10000/temp/
 newUrl: https://dogcat-s3-teamproject.s3.ap-northeast-2.amazonaws.com/
-
+s3UploadedUrl: https://dogcat-s3-teamproject.s3.ap-northeast-2.amazonaws.com/
 
 logging:
   level:
