업로드 관련 s3에서 local로 옮기기
파일 저장 고치기

--- a/build.gradle
+++ b/build.gradle
@@ -114,10 +114,10 @@ test {
 //}
 
 //  TODO 배포시 활성화
-processResources.dependsOn('copySecret')
+//processResources.dependsOn('copySecret')
 
-tasks.register('copySecret', Copy) {
-    from './Secret-DogCat/LocalYml'
-    include "application.yml"  // 복사할 파일들
-    into 'src/main/resources'  // 복사 위치
-}
+//tasks.register('copySecret', Copy) {
+//    from './Secret-DogCat/LocalYml'
+//    include "application.yml"  // 복사할 파일들
+//    into 'src/main/resources'  // 복사 위치
+//}
