이미지 업로드&삭제 관련 모두 캐싱
이미지 테이블 마크 앤 스윕

--- a/.gitignore
+++ b/.gitignore
@@ -258,9 +258,7 @@ gradle-app.setting
 # IntelliJ generated files
 src/main/generated/
 
-# Cache of project
-.gradletasknamecache
-
 src/main/resources/*.yml
-./mariadb-data
-./redis-data
+
+/mariadb-data/
+/redis-data/
